@@ -1,13 +1,17 @@
 package org.seng302.leftovers.service;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.seng302.leftovers.controllers.DGAAController;
-import org.seng302.leftovers.dto.SaleListingSearchDTO;
+import org.seng302.leftovers.dto.business.BusinessType;
+import org.seng302.leftovers.dto.saleitem.SaleListingSearchDTO;
 import org.seng302.leftovers.entities.*;
 import org.seng302.leftovers.persistence.*;
 import org.seng302.leftovers.service.searchservice.SearchPageConstructor;
@@ -23,11 +27,11 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 
 @SpringBootTest
@@ -100,7 +104,7 @@ class SearchServiceSaleListingTest {
                 .withPassword("password123").build();
         testUser = userRepository.save(testUser);
         testBusiness = new Business.Builder()
-                .withBusinessType("Accommodation and Food Services")
+                .withBusinessType(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES)
                 .withAddress(testBusinessLocation)
                 .withName("Gregs pies")
                 .withDescription("We enjoy pies")
@@ -112,7 +116,8 @@ class SearchServiceSaleListingTest {
                 .withDescription("Yummy")
                 .withBusiness(testBusiness)
                 .withManufacturer("Good pies")
-                .withRecommendedRetailPrice("54").build();
+                .withRecommendedRetailPrice("54")
+                .build();
         testProduct = productRepository.save(testProduct);
         testInventoryItem = new InventoryItem.Builder()
                 .withPricePerItem("12")
@@ -381,7 +386,7 @@ class SearchServiceSaleListingTest {
         var testUser = userRepository.findAll().iterator().next();
         var testBusiness = new Business.Builder()
                 .withPrimaryOwner(testUser)
-                .withBusinessType("Accommodation and Food Services")
+                .withBusinessType(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES)
                 .withDescription("DESCRIPTION")
                 .withName("BUSINESS_NAME")
                 .withAddress(Location.covertAddressStringToLocation("108,Albert Road,Ashburton,Christchurch,New Zealand,Canterbury,8041"))
@@ -515,7 +520,7 @@ class SearchServiceSaleListingTest {
      * @param businessType to set up the business with
      */
     @Transactional
-    protected void setUpSaleItemsWithDifferentBusinessTypes(String businessType) {
+    protected void setUpSaleItemsWithDifferentBusinessTypes(BusinessType businessType) {
         var testUser = userRepository.findAll().iterator().next();
         var testBusiness = new Business.Builder()
                 .withPrimaryOwner(testUser)
@@ -562,21 +567,21 @@ class SearchServiceSaleListingTest {
      */
     private Stream<Arguments> generateDataForConstructSaleListingSpecificationFromBusinessType() {
         return Stream.of(
-                Arguments.of(Arrays.asList(), 4),
-                Arguments.of(Arrays.asList("Accommodation and Food Services"), 1),
-                Arguments.of(Arrays.asList("Accommodation and Food Services", "Charitable organisation"), 2),
-                Arguments.of(Arrays.asList("Accommodation and Food Services", "Charitable organisation", "Non-profit organisation"), 3),
-                Arguments.of(Arrays.asList("Accommodation and Food Services", "Charitable organisation", "Non-profit organisation", "Retail Trade"), 4)
+                Arguments.of(List.of(), 4),
+                Arguments.of(List.of(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES), 1),
+                Arguments.of(List.of(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES, BusinessType.CHARITABLE), 2),
+                Arguments.of(List.of(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES, BusinessType.CHARITABLE, BusinessType.NON_PROFIT), 3),
+                Arguments.of(List.of(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES, BusinessType.CHARITABLE, BusinessType.NON_PROFIT, BusinessType.RETAIL_TRADE), 4)
         );
     }
 
     @Transactional
     @ParameterizedTest
     @MethodSource("generateDataForConstructSaleListingSpecificationFromBusinessType")
-    void constructSaleListingSpecificationFromBusinessType_businessesCreatedWithDifferentBusinessTypes_saleItemsReturnedAreFromThatBusinessType(List<String> expectedBusinessTypes, int expectedSize) throws Exception {
+    void constructSaleListingSpecificationFromBusinessType_businessesCreatedWithDifferentBusinessTypes_saleItemsReturnedAreFromThatBusinessType(List<BusinessType> expectedBusinessTypes, int expectedSize) throws Exception {
         // This line is required because the set up above is affecting the results of the test cases below
         saleItemRepository.deleteAll();
-        for (String businessType : Business.getBusinessTypes()) {
+        for (BusinessType businessType : BusinessType.values()) {
             setUpSaleItemsWithDifferentBusinessTypes(businessType);
         }
 
@@ -605,41 +610,41 @@ class SearchServiceSaleListingTest {
                 Arguments.of(new SaleListingSearchDTO(new BigDecimal("0.0"), new BigDecimal("0.0"),
                         today.plus(Integer.parseInt("0"), ChronoUnit.DAYS),
                         today.plus(Integer.parseInt("0"), ChronoUnit.DAYS),
-                        Arrays.asList()), 0),
+                        List.of()), 0),
                 Arguments.of(new SaleListingSearchDTO(new BigDecimal("0.0"), new BigDecimal("5.0"),
                         today.plus(Integer.parseInt("0"), ChronoUnit.DAYS),
                         today.plus(Integer.parseInt("5"), ChronoUnit.DAYS),
-                        Arrays.asList("Accommodation and Food Services")), 1),
+                        List.of(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES)), 1),
                 Arguments.of(new SaleListingSearchDTO(new BigDecimal("6.0"), new BigDecimal("10.0"),
                         today.plus(Integer.parseInt("6"), ChronoUnit.DAYS),
                         today.plus(Integer.parseInt("10"), ChronoUnit.DAYS),
-                        Arrays.asList("Accommodation and Food Services", "Charitable organisation")), 1),
+                        List.of(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES, BusinessType.CHARITABLE)), 1),
                 Arguments.of(new SaleListingSearchDTO(new BigDecimal("11.0"), new BigDecimal("15.0"),
                         today.plus(Integer.parseInt("11"), ChronoUnit.DAYS),
                         today.plus(Integer.parseInt("15"), ChronoUnit.DAYS),
-                        Arrays.asList("Accommodation and Food Services", "Charitable organisation", "Non-profit organisation")), 1),
+                        List.of(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES, BusinessType.CHARITABLE, BusinessType.NON_PROFIT)), 1),
                 Arguments.of(new SaleListingSearchDTO(new BigDecimal("0.0"), new BigDecimal("15.0"),
                         today.plus(Integer.parseInt("0"), ChronoUnit.DAYS),
                         today.plus(Integer.parseInt("15"), ChronoUnit.DAYS),
-                        Arrays.asList("Accommodation and Food Services", "Charitable organisation", "Non-profit organisation", "Retail Trade")), 7),
+                        List.of(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES, BusinessType.CHARITABLE, BusinessType.NON_PROFIT, BusinessType.RETAIL_TRADE)), 7),
                 Arguments.of(new SaleListingSearchDTO(new BigDecimal("0.0"), new BigDecimal("14.0"),
                         today.plus(Integer.parseInt("2"), ChronoUnit.DAYS),
                         today.plus(Integer.parseInt("15"), ChronoUnit.DAYS),
-                        Arrays.asList("Accommodation and Food Services", "Charitable organisation")), 3),
+                        List.of(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES, BusinessType.CHARITABLE)), 3),
                 Arguments.of(new SaleListingSearchDTO(new BigDecimal("2.0"), new BigDecimal("14.0"),
                         today.plus(Integer.parseInt("3"), ChronoUnit.DAYS),
                         today.plus(Integer.parseInt("12"), ChronoUnit.DAYS),
-                        Arrays.asList()), 5),
+                        List.of()), 5),
                 Arguments.of(new SaleListingSearchDTO(new BigDecimal("2.0"), null,
                         today.plus(Integer.parseInt("3"), ChronoUnit.DAYS),
                         null,
-                        Arrays.asList()), 6),
+                        List.of()), 6),
                 Arguments.of(new SaleListingSearchDTO(null, new BigDecimal("14.0"),
                         null, today.plus(Integer.parseInt("12"), ChronoUnit.DAYS),
-                        Arrays.asList()), 6),
+                        List.of()), 6),
                 Arguments.of(new SaleListingSearchDTO(null, null,
                         null, null,
-                        Arrays.asList()), 7)
+                        List.of()), 7)
         );
     }
 
@@ -650,7 +655,7 @@ class SearchServiceSaleListingTest {
         // This line is required because the set up above is affecting the results of the test cases below
         saleItemRepository.deleteAll();
         // Make use of the two methods for generating sale items and use them as test cases
-        for (String businessType : Business.getBusinessTypes()) {
+        for (BusinessType businessType : BusinessType.values()) {
             setUpSaleItemsWithDifferentBusinessTypes(businessType);
         }
         setUpSaleItemsWithDifferentPricesClosingDates();
